# asistente-por-voz-belen

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: arquitectura.md  instalacion.md
scripts/: install.sh  run_belen.sh
src/belen/: __init__.py  __main__.py  brain.py  cli.py  config.py  feedback.py  hotkey.py  logging_utils.py  permissions.py  pipeline.py  project_selector.py  recorder.py  safety.py  stt.py  tts.py  ui.py  visual_ui.py  wakeword.py
tests/: test_brain.py  test_config.py  test_hotkey.py  test_pipeline.py  test_project_selector.py  test_recorder.py  test_safety.py  test_stt.py  test_tts.py  test_ui.py  test_visual_ui.py  test_wakeword.py
